results/care_pd_full/gen_1/results/job_log.out
========================================================================
[evaluate] genome:      gen_1
[evaluate] program:     /workspace/ShinkaEvolveCarePD/results/care_pd_full/gen_1/main.py
[evaluate] results_dir: /workspace/ShinkaEvolveCarePD/results/care_pd_full/gen_1/results
[evaluate] care_pd_dir: /workspace/CARE-PD
[evaluate] gpu:         CUDA  device=NVIDIA RTX A5000  vram=25.3GB  gpus=1
========================================================================
[evaluate] Loading dataset from /workspace/CARE-PD/assets/datasets/BMCLab.pkl ...
[evaluate] Dataset loaded in 0.13s
[evaluate] subjects=23  walks=781  label_dist={0:341, 1:276, 2:164}  folds=6
[evaluate] Pretrained checkpoints available:
  mixste: best_epoch_cpn_81f.bin (404.7MB)
  momask: opt.txt (0.0MB), .DS_Store (0.0MB), net_best_fid.tar (84.1MB)
  motionagformer: motionagformer-s-h36m.pth.tr (59.8MB)
  motionbert: motionbert.bin (170.0MB)
  motionbertlite: latest_epoch.bin (64.1MB)
  motionclip: motionclip_encoder_checkpoint_0100.pth.tar (77.9MB), .DS_Store (0.0MB)
  poseformerv2: 27_243_45.2.bin (172.8MB), 9_81_46.0.bin (172.5MB), .DS_Store (0.0MB)
  potr: pre-trained_NTU_ckpt_epoch_199_enc_80_dec_20.pt (26.5MB)
========================================================================
[evaluate] Importing genome ...
[evaluate] IMPORT FAILED after 0.01s
Traceback (most recent call last):
  File "/workspace/ShinkaEvolveCarePD/results/care_pd_full/evaluate.py", line 192, in main
    mod = _load_program(program_path)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/ShinkaEvolveCarePD/results/care_pd_full/evaluate.py", line 83, in _load_program
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/workspace/ShinkaEvolveCarePD/results/care_pd_full/gen_1/main.py", line 260
    Okay, I'm working on the update.
           ^
SyntaxError: unterminated string literal (detected at line 260)

